		Uses Orphaning + glMapBuffer. Performance improve when rendering serveral particles
. [FIX] Scheduler: API improvements:
		unscheduleAllSelectors -> unscheduleAll (since it also unschedules blocks)
		unscheduleAllSelectorsForTarget -> unscheduleAllForTarget (since it also unschedules blocks)
		Old methods can be called, but are deprecated.
. [FIX] Templates: Autoration can be overriden in runtime on iOS 6
		Fixed some grammar errors
. [FIX] TextureAtlas: Uses Orphaning + glMapBuffer. Performance improve when rendering serveral particles
. [FIX] Tests: Watermelon With Me uses new Chipmunk API
		Added new JS tests for Chipmunk (Buoyancy, Pyramid, Joints, etc...)
		EventTest (Mac): Fixed memory leaks, dangling pointer and logic
. [FIX] Texture: Improved assert when updating filter on NPOT textures
. [FIX] TextureCache: filenames are standarized before adding them into the cache
. [FIX] TMX Tiled Maps: Resused code is re-initialized in a faster
. [FIX] Touch Delegate:
		CCTargetedTouchDelegate -> CCTouchOneByOneDelegate
		CCStandardTouchDelegate -> CCTouchAllAtOnceDelegate
. [FIX] Windows: Toggle fullscreen does not reset whether or not to support touches (issue #1420)
. [FIX] Xcode: Fixed compiler warnigns
. [3RD] JS Bindings: Updated to v0.3
		Chipmunk API is compatible with Chipmunk-JS
		CocosBuilder Reader supports "outlets", Animation callbacks, and improved JSB API
		Better registration code
. [3RD] Chipmunk: Updated to v6.1.2.
		Chipmunk is a git submodule now.
. [3RD] CocosBuilder Reader: Updated to v2.1
. [3RD] SpiderMonkey: Updated to v17-beta
		Added armv7s support

version 2.1-beta2 13-Sept-2012
. [NEW] Templates: Support for new iPhone5 resolution: Added Default-568h@2x.png in templates and cocos2d-ios.xcodeproj
. [FIX-MAC] LabelTTF works as expected on HiDPI / RetinaDisplay MacBooks
. [FIX] Templates: Mac Chipmunk template compiles OK
			Mac Templates don't include the 32-bit architecture
			Mac Temapltes use "current version" as new deploy OS version
